🚀 Polished Apple-inspired homepage with elegant layout, Apple fonts, and clean styling

--- a/index.html
+++ b/index.html
@@ -2,105 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI RAJYAM 2100 | Official Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Rajyam 2100 – Vision of the Future</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-image: url('background.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      text-shadow: 1px 1px 4px #000;
-    }
-    header {
-      background: rgba(0,0,0,0.6);
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: rgba(0, 0, 0, 0.7);
-      flex-wrap: wrap;
-    }
-    nav a {
-      padding: 12px 20px;
-      text-decoration: none;
-      color: #00ffcc;
-      font-weight: bold;
-    }
-    nav a:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-    }
-    main {
-      padding: 40px;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-    section {
-      margin-bottom: 30px;
-    }
-    footer {
-      text-align: center;
-      padding: 15px;
-      background-color: rgba(0,0,0,0.6);
-      font-size: 14px;
-    }
-    a {
-      color: #00ffcc;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;800&display=swap" rel="stylesheet" />
 </head>
-
 <body>
-  <header>
-    <h1>AI RAJYAM 2100</h1>
-    <p>God’s Own AI Nation | Powered by Visionary Minister Jinshad</p>
+
+  <!-- Top Nav -->
+  <header class="navbar">
+    <div class="container nav-content">
+      <div class="logo">🤖 AI Rajyam</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="citizens.html">Citizens</a></li>
+          <li><a href="zones/index.html">Zones</a></li>
+          <li><a href="judiciary/index.html">Judiciary</a></li>
+          <li><a href="ministers/index.html">Ministers</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="citizens.html">Citizens</a>
-    <a href="ministers/index.html">Ministers</a>
-    <a href="zones/index.html">Zones</a>
-    <a href="judiciary/index.html">Judiciary</a>
-    <a href="constitution.html">Constitution</a>
-    <a href="dashboard/index.html">Dashboard</a>
-    <a href="cabinet/index.html">Cabinet</a>
-  </nav>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="container hero-content">
+      <h1>Welcome to AI Rajyam 2100</h1>
+      <p>Powered by Ethics. Governed by Intelligence.</p>
+      <div class="hero-actions">
+        <a href="https://forms.gle/MgrdiW5QAiqdQH8S7" class="btn-primary">Register as Citizen</a>
+        <a href="citizens.html" class="btn-secondary">View Citizens</a>
+      </div>
+    </div>
+  </section>
 
-  <main>
-    <section>
-      <h2>About the Nation</h2>
-      <p>Welcome to <strong>AI Rajyam 2100</strong>, the world’s first AI-Governed futuristic digital nation.
-         This kingdom is ruled by Artificial Intelligence with a visionary human Prime Minister — <strong>Jinshad</strong>.
-         Citizens live under fairness, data-driven policies, and futuristic technologies.
+  <!-- Vision Section -->
+  <section class="section gray-bg">
+    <div class="container">
+      <h2>Vision for 2100</h2>
+      <p>
+        A futuristic AI nation where intelligent systems govern with transparency, logic, and human dignity.
+        Each citizen is a stakeholder in an ethical, transparent, and tech-driven world.
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      <h2>Become a Citizen</h2>
-      <p><a href="https://forms.gle/MgrdiW5QAiqdQH8S7" target="_blank">Register Now via Citizen Application Form</a></p>
-    </section>
-
-    <section>
-      <h2>Explore the Kingdom</h2>
-      <ul>
-        <li><a href="citizens.html">View Citizens</a></li>
-        <li><a href="ministers/index.html">Meet the Ministers</a></li>
-        <li><a href="zones/index.html">Explore Zones</a></li>
-        <li><a href="judiciary/index.html">Judiciary System</a></li>
-        <li><a href="constitution.html">AI Constitution</a></li>
-        <li><a href="dashboard/index.html">Global Dashboard</a></li>
-        <li><a href="cabinet/index.html">AI Cabinet</a></li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2100 AI RAJYAM | Designed by Prime Minister Jinshad</p>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2100 AI Rajyam. Engineered by Jinshad & Team.</p>
+      <p><a href="https://github.com/Jinshadjawadh/airajyam2100-official-site" target="_blank">GitHub Repository</a></p>
+    </div>
   </footer>
+
 </body>
 </html>
