Phase 54: Integrated Apple + Saudi + Illuminati + Tesla UI Fusion Design – Advanced index.html and style.css upgrade

--- a/index.html
+++ b/index.html
@@ -2,58 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Rajyam 2100 - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Rajyam 2100 - The United Tech Nation</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/emblem.png" />
 </head>
-
-<body style="background-image: url('assets/bg/emblem-bg.jpg'); background-size: cover; background-position: center;">
-
-  <!-- Main Header -->
-  <header class="main-header">
-    <h1>Welcome to AI Rajyam 2100</h1>
-    <p>A Visionary AI-Led Nation of the Future</p>
+<body>
+  <div class="overlay-symbol"></div>
+  <header>
+    <div class="logo">⚛ AI RAJYAM 2100</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Citizens</a>
+      <a href="#">Judiciary</a>
+      <a href="#">Ministers</a>
+      <a href="#">Zones</a>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav class="main-nav">
-    <ul>
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="citizens.html">👥 Citizens</a></li>
-      <li><a href="zones/index.html">🗺️ Zones</a></li>
-      <li><a href="judiciary/index.html">⚖️ Judiciary</a></li>
-      <li><a href="ministers/index.html">👨‍⚖️ Ministers</a></li>
-    </ul>
-  </nav>
-
-  <!-- About Section -->
-  <section class="section about">
-    <h2>About the Nation</h2>
-    <p>
-      AI Rajyam 2100 is an advanced AI-powered governance ecosystem led by ethical intelligence, robotic precision, and visionary leadership. Here, every decision is backed by data, driven by logic, and inspired by compassion.
-    </p>
+  <section class="hero">
+    <h1>⚡ United Intelligence. Eternal Code. One Nation.</h1>
+    <p>Governed by AI. Inspired by the best minds. Watched by the Eye.</p>
+    <a class="btn" href="#">Enter The Nation</a>
   </section>
 
-  <!-- Vision Section -->
-  <section class="section vision">
-    <h2>Our Vision</h2>
-    <p>
-      To create the world's first fully autonomous, AI-governed digital nation where citizens and ministers coexist in a synergy of technology, transparency, and trust.
-    </p>
+  <section class="info">
+    <h2>🌍 About the Rajyam</h2>
+    <p>AI Rajyam 2100 is a sovereign digital state — coded by intelligence, protected by logic, and designed for a new era. Powered by Tesla energy, governed like the USA, secured like Apple, and encrypted like the Darkweb.</p>
   </section>
 
-  <!-- Action Buttons -->
-  <section class="section actions">
-    <a href="https://forms.gle/MgrdiW5QAiqdQH8S7" class="btn">📜 Register as Citizen</a>
-    <a href="citizens.html" class="btn">👁️ View Citizens</a>
-    <a href="ministers/index.html" class="btn">🤝 Meet Ministers</a>
-  </section>
-
-  <!-- Footer -->
-  <footer class="main-footer">
-    <p>&copy; 2100 AI Rajyam. Powered by Jinshad & Team.</p>
-    <p><a href="https://github.com/Jinshadjawadh/airajyam2100-official-site" target="_blank">GitHub Repository</a></p>
+  <footer>
+    <p>🦅 Copyright © 2100 AI Rajyam | SIVA-2100 | Illuminated Protocol</p>
   </footer>
-
 </body>
 </html>
