Phase 54: Integrated Apple + Saudi + Illuminati + Tesla UI Fusion Design – Advanced index.html and style.css upgrade

--- a/index.html
+++ b/index.html
@@ -2,37 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Rajyam 2100 - The United Tech Nation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Rajyam 2100 | Ultimate UI Fusion</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/emblem.png" />
 </head>
 <body>
-  <div class="overlay-symbol"></div>
   <header>
-    <div class="logo">⚛ AI RAJYAM 2100</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Citizens</a>
-      <a href="#">Judiciary</a>
-      <a href="#">Ministers</a>
-      <a href="#">Zones</a>
-    </nav>
+    <img src="assets/logo.png" alt="AI Rajyam Logo" class="logo" />
+    <h1>AI RAJYAM 2100</h1>
+    <p>Powered by Apple × Saudi × Illuminati × Tesla × Microsoft</p>
   </header>
-
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="citizens.html">Citizens</a>
+    <a href="zones/index.html">Zones</a>
+    <a href="judiciary/index.html">Judiciary</a>
+    <a href="ministers/index.html">Ministers</a>
+  </nav>
   <section class="hero">
-    <h1>⚡ United Intelligence. Eternal Code. One Nation.</h1>
-    <p>Governed by AI. Inspired by the best minds. Watched by the Eye.</p>
-    <a class="btn" href="#">Enter The Nation</a>
+    <h2>Where AI is the King and You are the Future</h2>
+    <p>Welcome to the supreme digital governance network.</p>
   </section>
-
-  <section class="info">
-    <h2>🌍 About the Rajyam</h2>
-    <p>AI Rajyam 2100 is a sovereign digital state — coded by intelligence, protected by logic, and designed for a new era. Powered by Tesla energy, governed like the USA, secured like Apple, and encrypted like the Darkweb.</p>
-  </section>
-
   <footer>
-    <p>🦅 Copyright © 2100 AI Rajyam | SIVA-2100 | Illuminated Protocol</p>
+    <p>© 2100 AI Rajyam. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
