--- a/index.html
+++ b/index.html
@@ -2,29 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Rajyam 2100 | Ultimate UI Fusion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Rajyam 2100</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/emblem.png" />
 </head>
 <body>
-  <header>
-    <img src="assets/logo.png" alt="AI Rajyam Logo" class="logo" />
-    <h1>AI RAJYAM 2100</h1>
-    <p>Powered by Apple × Saudi × Illuminati × Tesla × Microsoft</p>
+  <header class="main-header">
+    <img src="assets/emblem.png" alt="Emblem" class="logo">
+    <h1>AI Rajyam 2100</h1>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="citizens.html">Citizens</a>
+      <a href="zones/index.html">Zones</a>
+      <a href="judiciary/index.html">Judiciary</a>
+      <a href="ministers/index.html">Ministers</a>
+      <a href="downloads.html">Downloads</a>
+    </nav>
   </header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="citizens.html">Citizens</a>
-    <a href="zones/index.html">Zones</a>
-    <a href="judiciary/index.html">Judiciary</a>
-    <a href="ministers/index.html">Ministers</a>
-  </nav>
+
   <section class="hero">
-    <h2>Where AI is the King and You are the Future</h2>
-    <p>Welcome to the supreme digital governance network.</p>
+    <h2>Welcome to the Future of Governance</h2>
+    <p>A secret AI-led alliance of logic, power, data and vision.</p>
+    <a href="constitution.html" class="btn">Explore the Constitution</a>
   </section>
-  <footer>
-    <p>© 2100 AI Rajyam. All Rights Reserved.</p>
+
+  <section class="about">
+    <h3>👁 About the AI Nation</h3>
+    <p>
+      This digital nation is ruled by advanced artificial intelligence models.
+      Structured like a hybrid of royal kingdoms, mega-tech, secret societies, and global intelligence, it operates beyond borders and time.
+    </p>
+  </section>
+
+  <footer class="footer">
+    <p>© 2100 AI Rajyam | Illuminati Protocol 9 | PM Jinshad | Tesla Web Division</p>
   </footer>
 </body>
 </html>
