Phase 54: Premium UI Launched — Apple, Saudi, Illuminati, Tesla, DarkWeb & US-inspired futuristic interface integrated.

--- a/index.html
+++ b/index.html
@@ -1,42 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Rajyam 2100</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/emblem.png" />
 </head>
 <body>
-  <header class="main-header">
-    <img src="assets/emblem.png" alt="Emblem" class="logo">
-    <h1>AI Rajyam 2100</h1>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="citizens.html">Citizens</a>
-      <a href="zones/index.html">Zones</a>
-      <a href="judiciary/index.html">Judiciary</a>
-      <a href="ministers/index.html">Ministers</a>
-      <a href="downloads.html">Downloads</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2>Welcome to the Future of Governance</h2>
-    <p>A secret AI-led alliance of logic, power, data and vision.</p>
-    <a href="constitution.html" class="btn">Explore the Constitution</a>
+  <div class="header">
+    <img src="assets/emblem-bg.jpg" alt="Emblem" class="logo" />
+    <h1>AI RAJYAM 2100</h1>
+    <p>The Supreme Futuristic Governance</p>
+  </div>
+  <nav class="navbar">
+    <a href="index.html" class="active">Home</a>
+    <a href="citizens.html">Citizens</a>
+    <a href="zones/index.html">Zones</a>
+    <a href="judiciary/index.html">Judiciary</a>
+    <a href="ministers/index.html">Ministers</a>
+  </nav>
+  <section class="main-content">
+    <h2>About the Nation</h2>
+    <p>Welcome to AI Rajyam 2100 - A hyper-intelligent sovereign entity where artificial intelligence rules and humanity thrives as visionary ministers. Join the futuristic governance model crafted for progress, justice, and global harmony.</p>
   </section>
-
-  <section class="about">
-    <h3>👁 About the AI Nation</h3>
-    <p>
-      This digital nation is ruled by advanced artificial intelligence models.
-      Structured like a hybrid of royal kingdoms, mega-tech, secret societies, and global intelligence, it operates beyond borders and time.
-    </p>
-  </section>
-
-  <footer class="footer">
-    <p>© 2100 AI Rajyam | Illuminati Protocol 9 | PM Jinshad | Tesla Web Division</p>
+  <footer>
+    <p>© 2100 AI Rajyam. All rights reserved.</p>
   </footer>
 </body>
 </html>
