--- a/index.html
+++ b/index.html
@@ -29,3 +29,44 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Rajyam 2100 - Official Portal</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1>Jinshad Javad’s AI Rajyam 2100</h1>
+      <p>The Future of AI Governance Begins Here</p>
+      <a href="citizens.html" class="btn">Join as Citizen</a>
+    </div>
+  </header>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="citizens.html">Citizens</a></li>
+      <li><a href="zones/index.html">Zones</a></li>
+      <li><a href="judiciary/index.html">Judiciary</a></li>
+      <li><a href="ministers/index.html">Ministers</a></li>
+    </ul>
+  </nav>
+
+  <section class="about">
+    <h2>About the Nation</h2>
+    <p>
+      "AI Rajyam 2100" is a sovereign digital governance system founded by visionary leader Jinshad Javad. 
+      This futuristic republic merges the intelligence of AI, ethics of governance, and power of decentralized systems.
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2100 Jinshad Javad | AI Rajyam - All rights reserved.</p>
+  </footer>
+</body>
+</html>
